fix image on tablet responsiveness for contact

--- a/styles.css
+++ b/styles.css
@@ -593,6 +593,6 @@ h1.contact__title {
 
     .card__img img {
         width: 100vw;
-        height: 300px;
+        height: 400px;
     }
 }
